Update baseURL and title

--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -2,8 +2,8 @@
 ## CHANGE THESE
 ############################
 
-baseURL: 'https://username.github.io/L1nkr'
-title: 'L1nkr'
+baseURL: 'https://fazlerabbi37.github.io/sotm-asia-links'
+title: 'State of the Map Asia Social Links'
 
 ############################
 ## MODULES
