--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,16 +14,17 @@ author:
 
 links:
   - website: https://stateofthemap.asia/
+  - email: stateofthemapasia@gmail.com
+  - tel: https://tel:+8801822844848
   - github: https://github.com/sotm-asia/
+  - facebook: https://www.facebook.com/SotmAsia/
   - instagram: https://www.instagram.com/stateofthemap_asia/
   - x-twitter: https://x.com/SotmAsia/
-  - mastodon: https://en.osm.town/@sotmasia/
-  - telegram: https://t.me/+nUCQpqtFzy84ZmY1
-  - email: stateofthemapasia@gmail.com
   - linkedin: https://www.linkedin.com/company/state-of-the-map-asia/
-  - mailing-list: https://lists.openstreetmap.org/listinfo/talk-asia/ # mailing list
-  - facebook: https://www.facebook.com/SotmAsia/ # Facebook
-
+  - telegram: https://t.me/+nUCQpqtFzy84ZmY1
+  - mastodon: https://en.osm.town/@sotmasia/
+  - link: https://lists.openstreetmap.org/listinfo/talk-asia/ # mailing list
+  - flickr: https://www.flickr.com/people/185386731@N07/
 
   # - reddit: 
   # - whatsapp: 
