rename to connect

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -89,7 +89,7 @@ tooltip: true
 ## OpenGraph & Twitter Cards
 ###############################
 
-title: "State of the Map Asia Socail Links"
-description: "All social media links for State of the Map Asia"
+title: "Connect with SotM Asia"
+description: "Connect with all State of the Map Asia social media platfroms"
 images:
   - thumbnail.png
