--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -2,8 +2,8 @@
 ## CHANGE THESE
 ############################
 
-baseURL: 'https://fazlerabbi37.github.io/sotm-asia-links'
-title: 'State of the Map Asia Social Links'
+baseURL: 'https://fazlerabbi37.github.io/sotm-asia-connect'
+title: 'Connect with SotM Asia'
 
 ############################
 ## MODULES
