--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -25,6 +25,7 @@ links:
   - mastodon: https://en.osm.town/@sotmasia/
   - link: https://lists.openstreetmap.org/listinfo/talk-asia/ # mailing list
   - flickr: https://www.flickr.com/people/185386731@N07/
+  - medium: https://medium.com/state-of-the-map-asia
 
   # - reddit: 
   # - whatsapp: 
@@ -56,7 +57,6 @@ links:
   # - strava: 
   # - untappd: 
   # - skype: 
-  # - medium: 
   # - foursquare: 
   # - apple: 
   # - amazon:
